--- a/tp06-banderas/src/index.css
+++ b/tp06-banderas/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-image: linear-gradient(-225deg, #b921d8 0%, #532bc4 52%, #26617c 100%);
+  font-family: 'Delicious Handrawn', cursive;
+  font-size: 26px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.tarjeta{
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 45px;
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: aliceblue;
+  border-radius: 15px;
+}
+
+.App {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.tarjetas-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+
+}
+
+img{
+  text-align: center;
+  width: auto;
+  border-radius: 10px;
+}
+
+input[type="text"]{
+  height: 30px;
+  width: 350px;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
 }
